# TalentScout-AI

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
scripts/: setup.sh
src/talentscout_ai/: __init__.py  app.py
src/talentscout_ai/api/: main.py
src/talentscout_ai/rag/: data.py  engine.py
