[project]
name = "talentscout-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hyperoot", email = "rajesh@hyperoot.dev" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=3.0.1",
    "streamlit>=1.36.0",
    "httpx>=0.27.0",
]

[project.scripts]
talentscout-ai = "talentscout_ai:main"
api = "talentscout_ai.api.main:app"
app = "talentscout_ai.app:__name__"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pre-commit>=4.2.0"]
